--- a/admin-panel/src/pages/Login.css
+++ b/admin-panel/src/pages/Login.css
@@ -4,7 +4,7 @@
     justify-content: center; 
     align-items: center;    
     height: 100vh;          
-    background-color: #f0f2f5; 
+    background-color: #ffffff; 
     margin-right:50px;
   }
   
